--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before install:
-  - docker built -f Dockerfile.dev -t obada/frontend
+  - docker build -f Dockerfile.dev -t obada/frontend
 
 script: 
   - docker run -p 8080:80 obada/frontend run npm test
