--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -11,6 +11,7 @@ COPY --chown=node:node ./package.json ./
 RUN npm install
 COPY --chown=node:node ./ ./
 
+EXPOSE 3000
 CMD ["npm", "run", "start"]
 
 # to mount volume: 
