--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before install:
-  - docker build -f Dockerfile -t obada/frontend .
+  - docker build -f Dockerfile.dev -t obada/frontend .
 
 script: 
   - docker run -e CI=true obada/frontend npm run test
