--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "ap-northeast-1"
-  app: "Frontend"
-  env: "Frontend-env"
+  app: "Frontend_II"
+  env: "Frontendii-env"
   bucket_name: "elasticbeanstalk-ap-northeast-1-432022256646"
-  bucket_path: "Frontend/"
+  bucket_path: "Frontend_II"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
